# velodyne

./: README.md
velodyne/: package.xml
velodyne_configuration/: CMakeLists.txt  package.xml  setup.py
velodyne_configuration/nodes/: alternate_modes_node.py  configuration_node.py  example_node.py  initialization_node.py
velodyne_configuration/src/: configuration_node.py  velodyne_curl_config.py
velodyne_configuration/src/velodyne_curl_communication_lib/: velodyne_curl_config.py
velodyne_driver/include/velodyne_driver/: driver.h  input.h
velodyne_driver/src/driver/: driver.cc
velodyne_driver/src/lib/: input.cc
velodyne_msgs/: CMakeLists.txt  package.xml
velodyne_msgs/msg/: VelodynePacketPointCloud.msg  VelodyneReturnMode.msg
velodyne_msgs/srv/: VelodyneRequestConfiguration.srv  VelodyneSetConfiguration.srv  VelodyneSpecialCommand.srv  VelodyneSpecialCommands.srv
velodyne_packet_pointcloud/: CMakeLists.txt  nodelets.xml  package.xml
velodyne_packet_pointcloud/include/: unpacker.h
velodyne_packet_pointcloud/include/velodyne_packet_pointcloud/: unpacker.h
velodyne_packet_pointcloud/src/: CMakeLists.txt  packetpc_node.cpp  packetpc_nodelet.cpp  unpacker.cpp
velodyne_pointcloud/: CMakeLists.txt  nodelets.xml  package.xml
velodyne_pointcloud/cfg/: TransformNode.cfg
velodyne_pointcloud/include/velodyne_pointcloud/: calibration.hpp  datacontainerbase.h  datacontainerbase.hpp  ego_motion_correction.h  organized_cloudXYZIRT.h  organized_cloudXYZIRT.hpp  pointcloudXYZIRT.h  pointcloudXYZIRT.hpp  pointcloud_extended.h  pointcloud_extended_confidence.h  pointcloud_extended_ng.h  rawdata.h  rawdata.hpp  return_types_flags.h  streaming_cloudXYZIRT.h  thread_pool.h  transform.h  transform.hpp
velodyne_pointcloud/src/conversions/: CMakeLists.txt  convert.cpp  ego_motion_correction.cc  ego_motion_correction_node.cc  ego_motion_correction_nodelet.cc  organized_cloudXYZIRT.cc  pointcloudXYZIRT.cc  pointcloud_extended.cc  pointcloud_extended_confidence.cc  pointcloud_extended_ng.cc  streaming_cloudXYZIRT.cc  transform.cc  transform.cpp
velodyne_pointcloud/src/lib/: CMakeLists.txt  calibration.cpp  organized_cloudXYZIRT.cpp  pointcloudXYZIRT.cpp  rawdata.cc  rawdata.cpp
velodyne_pointcloud/tests/: CMakeLists.txt  test_row_step.cpp
