<?xml version="1.0"?>
<package format="2">
  <name>velodyne_packet_pointcloud</name>
  <version>1.6.1</version>
  <description>
    Packet comvertion to Pointcloud2 for VLS128 Velodyne.
  </description>
  <maintainer email="juan.gonzalez@unibw.de">Juan D. González</maintainer>
  <author>Juan D. González</author>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>

  <depend>angles</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>velodyne_driver</depend>
  <depend>velodyne_msgs</depend>
  <depend>velodyne_pointcloud</depend>
  <depend>ethernet_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>diagnostic_updater</depend>
  <depend>eigen</depend>

  <exec_depend>velodyne_laserscan</exec_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>tf2_ros</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
